laprusk/narou-dockerを参照にしつつパッチも適用した状態